Fix TimeDomain assignment in RendererSchedulerImpl::ApplyTaskQueuePolicy

Transitioning from TimeDomainType::THROTTLED to TimeDomainType::VIRTUAL
was busted.

Bug: 774363
Change-Id: Id9e61c2ad3428f8ccb031a2ef2de2d7f9ec24488
Reviewed-on: https://chromium-review.googlesource.com/720921
Commit-Queue: Alex Clarke <alexclarke@chromium.org>
Reviewed-by: Alexander Timin <altimin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509088}
Former-commit-id: a89906c3716662689a9792efc5e6ede635b06712